# ArdWeatherStation

./: .gitignore  .gitmodules  README.md
client_display/: client_display.ino  common.h
client_sensor/: client_sensor.ino
server/: CMakeLists.txt  Dockerfile  run_docker.sh  weather_server.cpp  weather_server.h
server/src/: CMakeLists.txt  common.h  weather_server.cpp  weather_server.h
